$Id: ChangeLog,v 1.6 2002-08-13 15:55:38 varuttam Exp $
	
Version 2.6.???
	
BUGS FIXED
	* Util/input.C:tokentype() - token conversion to lower case only
	  changed first character [AV] (08/13/2002)


NEW FEATURES


CODE UPDATES
	* Update for addition of software for producing collaboration 
	  graphs in doxygen called 'dot'  [PW] (08/11/2002)
	
-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- 	

Version 2.6.0
	
* Start of ChangeLog (08/08/2002)

BUGS FIXED


NEW FEATURES
	* Squeeze multiple zeros out of ALARALib [PW] (08/09/2002) 
	  THIS WILL REQUIRE CHANGE IN MINOR REVISION NUMBER


CODE UPDATES
	* All class comments converted to Doxygen compliance
	* Added target to Makefile to make documentation with Doxygen
	* Improved C++ ISO standards compliance
	  - use correct headers
	  - completely specify entities from std namespace
	  - import various stream entities from std namespace
	* Added ChangeLog and TODO files
	
-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- 	

Version 2.5.3

BUGS FIXED
	* ASCII IEAF library was not being read properly - missing extra
	  line at end of each isotope's data

NEW FEATURES
	* NONE

CODE UPDATES
	* NONE
	
-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- 

Version 2.5.2

BUGS FIXED
	* Atomic X-ray data was not being included in gamma library when
	  translating from IEAF libarary

NEW FEATURES
	* NONE

CODE UPDATES
	* Added target to compile condor binary (at CAE)

-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- 	

Version 2.5.1

BUGS FIXED
	* Atomic X-ray data was not being included in gamma library
	* Incorrect results for schedules with varying fluxes.  Previous
	  bug fix (v2.?.?) was incomplete.  Diagonal matrix element was
	  not based on correct flux.
	* Simplified/corrected interpolation/extrapolation for contact
	  dose calculation.

NEW FEATURES
	* Added mode to only build chains and solve without output.  This
	  is designed to facilitate Condor operation that might have