@@ -1,4 +1,4 @@
-$Id: TODO,v 1.6 2002-08-09 19:23:38 wilsonp Exp $
+$Id: TODO,v 1.7 2002-08-23 20:49:08 fateneja Exp $
 
 When claiming a task from this list, please immediately place your
 name beside it, change the date from the date that it was added to
@@ -19,7 +19,6 @@ BUG FIXES
 NEW FEATURES
 ------------------
 [AV] Adjoint dose 
-[MF] Direct reading of RTFLUX files from DANTSYS
 **** (08/08/2002) Direct writing of SRCDX (?) gamma source file for DANTSYS
 **** (08/08/2002) Direct reading of MCTAL files from MCNP
 **** (08/08/2002) Alternative approximations for dose (e.g. line source)
